# iot_project

./: .gitignore  DATABASE.db  pyproject.toml
esp_code/: main.ino
server/: config.py  main.py
server/dash/: callbacks.py  dash_app.py  view.py
server/database_module/: database.py  tables.py
server/esp_routs/: router.py  schemas.py
server/notice/: __init__.py  send_notice.py
server/static/: styles.css
server/templates/: device_registration.html  login.html  user_panel.html  user_registration.html  welcome_page.html
server/user_routs/: router.py  schemas.py
