[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Yuri-ga1 <regota09@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


sqlalchemy = "^2.0.30"
phonenumbers = "^8.13.37"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "server.main:start_server"